fix text overflow

--- a/book.css
+++ b/book.css
@@ -52,6 +52,7 @@
   writing-mode: vertical-rl;
   font-family: "KaiTi", "FangSong", "SimSun", serif;
   font-size: 20px;
+  display: inline-block;
 }
 
 
